Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30047

Memory leak on rollback of bulk insert

Details

    Description

      InnoDB fails to remove the bulk_store when we roll back the bulk insert on multiple tables.
      This is caused by MDEV-29761

      Attachments

        Issue Links

          Activity

            thiru Thirunarayanan Balathandayuthapani created issue -
            thiru Thirunarayanan Balathandayuthapani made changes -
            Field Original Value New Value
            marko Marko Mäkelä made changes -
            Labels ASAN
            Summary innodb.insert_into_empty fails to remove bulk_store during bulk insert Memory leak on rollback of bulk insert
            marko Marko Mäkelä made changes -
            issue.field.resolutiondate 2022-11-21 08:09:07.0 2022-11-21 08:09:07.106
            marko Marko Mäkelä made changes -
            Fix Version/s 10.7.8 [ 28515 ]
            Fix Version/s 10.8.7 [ 28517 ]
            Fix Version/s 10.9.5 [ 28519 ]
            Fix Version/s 10.10.3 [ 28521 ]
            Fix Version/s 10.11.2 [ 28523 ]
            Resolution Fixed [ 1 ]
            Status Open [ 1 ] Closed [ 6 ]

            People

              thiru Thirunarayanan Balathandayuthapani
              thiru Thirunarayanan Balathandayuthapani
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.